courses/430_programming-languages/assignment-8/tests/error/error31.nex
yesle (verna) raspetchatat 3;
